fix bug causing some elements to not load and battle z-index

--- a/assets/css/battle.css
+++ b/assets/css/battle.css
@@ -109,7 +109,6 @@
 
 .participant-icon {
 	position: relative;
-	z-index: 1;
 }
 
 .orbit {
@@ -247,7 +246,7 @@
 
 }
 
-.field > * {
+.participant > * {
 	position: absolute;
 	pointer-events: none;
 }
@@ -257,6 +256,7 @@
 
 	background-color: var(--bg);
 
+	position: absolute;
 	width: 100%;
 	height: 80%;
 	top: 30%;
@@ -272,7 +272,7 @@
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	z-index: 1;
+	z-index: 0;
 
 	background-color: #0007;
 	
